--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="EN" dir="rtl">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
