--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -44,9 +44,11 @@
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
             </header>
+        <div>
             <article><h3>Interior Design</h3></article>
             <article><h3>Web Development</h3></article>
             <article><h3>Personal Brand</h3></article>
+        </div>
         </div>
         </section>
         <section>
