--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,26 +9,30 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
 <body>
-    <br><!--Header-->
+    <br>
+    <!--Header-->
     <header>
         <div></div>
         <span>Techium</span>
         <nav></nav>
     </div>
     </header>
-    <br><!--Main-->
+    <br>
+    <!--Main-->
     <main>
         <h1>Homepage</h1>
         <section>
         <div>
-            <br><!--Hero section-->
+            <br>
+            <!--Hero section-->
             <h2>We help you build your brand!</h2>
         </div>
         </section>
         <section>
         <div>
             <header>
-                <br><!--Services section-->
+                <br>
+                <!--Services section-->
                 <h2>Services</h2>
                 <p>We work with you</p>
             </header>
@@ -45,7 +49,8 @@
         <section>
             <div>
             <header>
-                <br><!--Works section-->
+                <br>
+                <!--Works section-->
                 <h2>Works</h2>
                 <p>Take a look in our portfolio</p>
             </header>
@@ -59,7 +64,8 @@
         <section>
             <div>
                 <header>
-                    <br><!--About Us section-->
+                    <br>
+                    <!--About Us section-->
                     <h2>About Us</h2>
                     <p>Everything about us</p>
                 </header>
@@ -76,7 +82,8 @@
         <section>
             <div>
                 <header>
-                    <br><!--Latest news section-->
+                    <br>
+                    <!--Latest news section-->
                     <h2>Latest news</h2>
                 </header>
             <div>
@@ -101,7 +108,8 @@
         <section>
         <div>
             <header>
-                <br><!--Testimonials section-->
+                <br>
+                <!--Testimonials section-->
                 <h2>Testimonials</h2>
                 <p>We are more than a digital company</p>
             </header>
@@ -115,7 +123,8 @@
         <section>
         <div>
             <header>
-            <br><!--Contact section--> 
+            <br>
+            <!--Contact section--> 
             <h2>Contact</h2>
             <p>We like to know new people</p>
             </header>
@@ -125,7 +134,8 @@
         </div>
         </section>
     </main>
-    <br><!--Footer-->
+    <br>
+    <!--Footer-->
     <footer>
         <div>Footer</div>
         </footer>
