--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -10,8 +10,9 @@
     </head>
 <body>
     <br>
-    <!--Header-->
+    <!-- Header -->
     <header>
+        <div></div>
         <div>
             <a href="/"><span>Techium</span></a>
         </div>
@@ -19,18 +20,18 @@
     </div>
     </header>
     <br>
-    <!--Main-->
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
         <br>
-        <!--Hero section-->
+        <!-- Hero section -->
         <section>
         <div>
             <h2>We help you build your brand!</h2>
         </div>
         </section>
         <br>
-        <!--Services section-->
+        <!-- Services section -->
         <section>
         <div>
             <header>
@@ -48,7 +49,7 @@
         </div>
         </section>
         <br>
-        <!--Works section-->
+        <!-- Works section -->
         <section>
             <div>
             <header>
@@ -63,7 +64,7 @@
         </div>
         </section>
         <br>
-        <!--About Us section-->
+        <!-- About Us section -->
         <section>
             <div>
                 <header>
@@ -81,7 +82,7 @@
         </div>
         </section>
         <br>
-        <!--Latest news section-->
+        <!-- Latest news section -->
         <section>
             <div>
                 <header>
@@ -107,7 +108,7 @@
         </div>
         </section>
         <br>
-        <!--Testimonials section-->
+        <!-- Testimonials section -->
         <section>
         <div>
             <header>
@@ -122,7 +123,7 @@
         </div>
         </section>
         <br>
-        <!--Contact section-->
+        <!-- Contact section -->
         <section>
         <div>
             <header>
@@ -136,7 +137,7 @@
         </section>
     </main>
     <br>
-    <!--Footer-->
+    <!-- Footer -->
     <footer>
         <div>Footer</div>
         </footer>
