--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -13,6 +13,7 @@
     <!-- Header -->
     <header>
         <div>
+        <div>
             <a href="/"><span>Techium</span> </a>
         </div>
         <nav></nav>
