--- a/0x00-html_advanced/32-styleguide.html
+++ b/0x00-html_advanced/32-styleguide.html
@@ -96,7 +96,8 @@
             </header>
             <div>
                 <address>
-                    320 Stewart Avenue, Unit 12 <br> New York City NY 10001
+                    320 Stewart Avenue, Unit 12 <br>
+                    New York City NY 10001
                 </address>
             </div>
             <div>
