--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -112,12 +112,14 @@
                     <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
                 </div>
         </section>
+        <br>
         <!-- Table -->
         <section>
             <header>
                 <h2>Table</h2>
             </header>
             <table>
+                <caption>Star Wars Trilogy Data</caption>
                 <tr>
                     <th scope="col">Title</th>
                     <th scope="col">Director</th>
