--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -150,7 +150,7 @@
         <!-- Details -->
         <section>
             <header>
-                <h3>Details</h3>
+                <h2>Details</h2>
             </header>
             <div>
                 <h3>Default</h3>
@@ -161,7 +161,7 @@
             </div>
             <div>
                 <h3>Open</h3>
-                <details>
+                <details open>
                     <summary>Always open</summary>
                     <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </details>
