--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -163,8 +163,10 @@
     <section>
         <header>
             <h2>Video</h2>
-            <video controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">
-                <source src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" type="video/mp4"> 
+            <video controls loop
+                src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4"
+                poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg"
+            >
                 Sorry, your browser doesn't support HTML5 video
             </video>
         </header>
