--- a/0x04-flexbox/5-index.html
+++ b/0x04-flexbox/5-index.html
@@ -12,13 +12,13 @@
   <body>
     <! Header >
     <header class="header" data-section-theme="dark">
-      <div class="container header-container">
+      <div class="container">
+        <div class="header-container">
         <div class="header-logo">
           <a href="#">
             <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
           </a>
         </div>
-      <div>
         <nav class="navbar-menu">
           <ul class="nav">
             <li class="nav-item">
