--- a/0x04-flexbox/100-article.html
+++ b/0x04-flexbox/100-article.html
@@ -78,7 +78,7 @@
                   Pugnant Stoici cum Peripateticis. Prioris generis est docilitas
                 </figcaption>
               </figure>
-              <p>Quare conare, quaeso. Dici enim nihil potest verius. Primum divisit ineleganter; Suam denique cuique naturam esse ad vivendum ducem</p>
+              <p>Quare conare, quaeso. Dici enim nihil potest verius. Primum divisit ineleganter; Suam denique cuique naturam esse ad vivendum ducem.</p>
               <blockquote cite="https://www.holbertonschool.com/">Ego autem tibi, Piso, assentior usu hoc venire, ut acrius aliquanto et attentius de claris viris locorum admonitu cogitemus.</blockquote>
               <p>Omnia contraria, quos etiam insanos esse vultis. Tibi hoc incredibile, quod beatissimum.</p>
               <h2>Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.</h2>
