--- a/0x05-form/03-article.html
+++ b/0x05-form/03-article.html
@@ -151,7 +151,7 @@
                   <fieldset>
                       <legend class="visually-hidden">Your personal information</legend>
                       <div class="form-group col-1-2">
-                          <label for="your-first-name">Fist Name</label>
+                          <label for="your-first-name">First Name</label>
                           <div class="form-field">
                               <span class="form-field-container"></span>
                           </div>
