--- a/0x05-form/04-article.html
+++ b/0x05-form/04-article.html
@@ -162,14 +162,16 @@
                           <label for="your-last-name">Last Name</label>
                           <div class="form-field">
                               <span class="form-field-container">
-                                  <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required>
+                                  <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="1" required>
                               </span>
                           </div>
                       </div>
                       <div class="form-group col-2-3">
                           <label for="your-email">Email</label>
                           <div class="form-field">
-                              <span class="form-field-container"></span>
+                              <span class="form-field-container">
+                                <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required>
+                              </span>
                           </div>
                       </div>
                   </fieldset>
@@ -269,4 +271,3 @@
     </footer>
   </body>
 </html>
-
