--- a/0x05-form/05-article.html
+++ b/0x05-form/05-article.html
@@ -187,6 +187,7 @@
                           <div class="form-field">
                               <span class="form-field-container">
                                   <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
+                                  <i class="form-field-icon"></i>
                               </span>
                               <p class="form-help">Title should be at least 4 characters and only contains letters</p>
                           </div>
