--- a/0x07-accessibility/skip-links/01-index.html
+++ b/0x07-accessibility/skip-links/01-index.html
@@ -14,11 +14,15 @@
       <!-- Skip links -->
       <nav aria-label="Skip links">
           <ul class="off-screen">
-              <li href="#a11y-primary-nav" class="skip-link">
+              <li>
+                  <a href="#a11y-primary-nav" class="skip-link">
                 Skip to primary navigation
+                </a>
               </li>
-              <li  href="#a11y-main-content" class="skip-link">
+              <li>
+                  <a href="#a11y-main-content" class="skip-link">
                 Skip to main content
+                </a>
               </li>
           </ul>
 
